handle "Combined" data tracks in session